# ISOAgLib

./: .deepsource.toml  .gitattributes  .gitignore  AUTHORS  AUTHORS.txt  CMakeLists.txt  COPYING  Doxyfile  Kconfig.projbuild  LICENSE.txt  PlaceMainHeaderWithNavbar.sh  README_LICENSED_PARTS.txt  TODO.dox  changelog.txt  contact_and_support.txt  disc-further.txt  download.txt  getting-installed.txt  howto-download.txt  index.html  information.txt  installation.txt  isoaglib_config.h  isoaglib_examples.lsm  license-conditions.txt  licensing.txt  main-features.txt  mainHeaderWithNavbar.txt  maintainers.txt  memory-usage.txt  menu-list.txt  oldNews.txt  outlook.txt  readme.txt  sitemap.txt  structural-overview.txt  support.txt  todo.txt  topic-template.txt  using-projects.txt  (+1 more)
IsoAgLib/: changelog.txt
IsoAgLib/build_utils/: README_LICENSED_PARTS.txt
IsoAgLib/doc/: header.html
IsoAgLib/simulated_io/: can_0_0_std  can_0_700_std.vario_org  can_send_0_1_ext
IsoAgLib_Examples/: autodatacollector.cpp  config_AutoDataCollector.h  config_Taskcontroller.h  config_imi_iso.h  config_tractor.h  imi.cpp  taskcontroller.cpp  test_hal.cpp  tractor.cpp
IsoAgLib_Examples/AutoDataCollector/: TutPrjDescAutoDataCollector.txt  getyflexmanager_c.h
IsoAgLib_Examples/AutoDataCollector_Classes/: defaultrecordconfig_c.cpp  defaultrecordconfig_c.h  getyflexmanager_c.cpp  getyflexmanager_c.h  gpsmanager_c.cpp  gpsmanager_c.h  procdatamanager_c.cpp  procdatamanager_c.h  specificrecordconfig_c.cpp  specificrecordconfig_c.h
IsoAgLib_Examples/CanServerMessenger/: CanServerMessenger.cpp  config_CanServerMessenger.h
IsoAgLib_Examples/Taskcontroller_Classes/: getyflexmanager_c.cpp  getyflexmanager_c.h  gpsmanager_c.cpp  gpsmanager_c.h  procdatamanager_c.cpp  specificrecordconfig_c.cpp  specificrecordconfig_c.h
IsoAgLib_Examples/compiler_projects/: conf_2_1_LocalReadDataSimpleMeasureIso  conf_2_3_LocalReadDataSimpleMeasureSetpointIso  conf_2_4_LocalWriteSetpointStdIso  conf_2_8_RemoteReadDataSimpleMeasureIso  conf_2_9_RemoteWriteSetpointStdIso  conf_5_1_ProprietaryPgn  conf_AutoDataCollector  conf_TractorConsole  conf_TractorInternalCan
IsoAgLib_Examples/imi_iso/: TutPrjDescimi_iso.txt
IsoAgLib_Examples/src/: test_hal.cpp
IsoAgLib_Examples/tractor/: TutPrjDesctractor.txt
admin/: PlaceMainHeaderWithNavbar.sh  createDoxygenDocumentation.sh  doxylog_categorizer.pl  includeTaggedFile.pl
admin/buildArchives/: createRelease.sh  create_win32_projects.sh  generateArchives.sh
admin/log/: doxylog_categorizer.pl
admin/testscripts/: compileSelectedTutorials.sh  compileTutorials.sh
build_utils/: vt2iso-3-0_VirtualTerminalIso.bat  vt2iso-3-0_VirtualTerminalIso.sh
build_utils/proc2iso/: Makefile  Makefile.win  Proc2Iso.dev  configure.in  proc2iso.kdevelop  proc2iso.kdevelop.filelist
build_utils/vt2iso/: Makefile  Makefile.incl  Makefile.paintlib  Vt2Iso.dev  vt2iso.kdevelop  vt2iso.kdevelop.filelist  vt2iso.kdevelop.pcs  vt2iso.kdevses
comm/: iisobus_c.h  iproprietarybus_c.h
comm/Part10_TaskController_Client/: idevicepool_c.cpp  idevicepool_c.h  ipdconnection_c.h  ipdlocal_c.h  ipdremote_c.h  iprocdata_c.h  itcclientconnection_c.h  itcclientserver_c.h
comm/Part12_DiagnosticsServices/: idtccontainer_c.h
comm/Part13_FileServer_Client/: ifsclient_c.h  ifsmanager_c.h  ifsserverinstance_c.h
comm/Part3_ProprietaryMessages/: igenericdata_c.cpp  igenericdata_c.h
comm/Part5_NetworkManagement/: iisomonitor_c.h  iisoname_c.h  istate_c.h
comm/Part6_VirtualTerminal_Client/: ivtclient_c.h  ivtclientconnection_c.h  ivtclientobjectpool_c.cpp  ivtclientobjectpool_c.h  ivtincludes.h  ivtobject_c.cpp  ivtobject_c.h  ivtobjectalarmmask_c.h  ivtobjectauxiliaryinput_c.h  ivtobjectcolourmap_c.h  ivtobjectcontainer_c.h  ivtobjectellipse_c.h  ivtobjectgraphicscontext_c.h  ivtobjectinputattributes_c.h  ivtobjectinputboolean_c.h  ivtobjectinputlist_c.h  ivtobjectinputnumber_c.h  ivtobjectkey_c.h  ivtobjectline_c.h  ivtobjectlinearbargraph_c.h  ivtobjectlineattributes_c.h  ivtobjectmask_c.h  ivtobjectmeter_c.h  ivtobjectobjectpointer_c.h  ivtobjectoutputnumber_c.h  ivtobjectoutputstring_c.h  ivtobjectpolygon_c.h  ivtobjectrectangle_c.h  ivtobjectstring_c.h  ivtobjectworkingset_c.h  ivttypes.h
comm/Part7_ApplicationLayer/: ignss_c.h  iisbclient_c.h  iisbstatehandler_c.h  itimeposgps_c.h  itracaux_c.h  itracfacilities_c.h  itracgeneral_c.h  itracguidance_c.h  itraclight_c.h  itracmove_c.h  itracpto_c.h  itractor_c.h  itractorfrontpto_c.h  itractorrearhitch_c.h
comm/impl/: isobus_c.cpp  isobus_c.h
commercial_BIOS/: README_LICENSED_PARTS.txt
commercial_BIOS.dummy/bios_esx/: README  Xos20esx.h
commercial_BIOS/bios_pc.testserver/: include  rte_client_lib
commercial_BIOS/bios_pc_mfc/: pcmfc10err.h  pcmfc10osy.h
commercial_DIOS/: hdd_io.cpp  hdd_io.h
commercial_DIOS.dummy/: hdd_io.cpp  hdd_io.h
commercial_DIOS/neu/: hdd_io.cpp
compiler_projects/: README_LICENSED_PARTS.txt
compiler_projects/EDE/: ClearTempCompilerOutput.sh
compiler_projects/SIMU/: ROM166WU.HEX  XOS20LEE.HEX  imi.cmm  (+6 more)
doc/: Doxyfile  Doxyfile-docu  DoxyfileAll  DoxyfileApi  DoxyfileInterface  footer.html  generate_doxygen_documentation.sh  header.html  stylesheet.css
examples/: README_LICENSED_PARTS.txt
hal/: hal_can.h  hal_system.h  hal_typedef.h
scheduler/: ischedulertask_c.h
simulated_io/: can_0_100_std  can_0_200_std  can_0_200_std.vario  can_0_200_std.varo_test2  can_0_503_std  can_0_700_std  can_0_700_std.fieldstar  can_0_e60000_ext  can_0_ea0000_ext  can_0_ee0000_ext  can_0_fe4900_ext
tests/: testDiagnosticMessages.sh
tools/: LICENSE  LICENSE.txt  README  README.txt
tools/can_server/cmake/can_server_msq_socketcan/: CMakeLists.txt
tools/can_server/cmake/can_server_pcan/: CMakeLists.txt
tools/can_server/cmake/can_server_sontheim_st_api/: CMakeLists.txt
tools/logalizer/cmake/: CMakeLists.txt
tools/proc2iso/cmake/: CMakeLists.txt
tutorial/: LICENSE.txt  README.txt
util/: compiler_adaptation_unicode.h  convert.h  iassert.cpp  iassert.h  iliberr_c.h  iutil_funcs.h
xgpl_src/: iGetyPos.sh  readme.txt
(+8622 files in other folders)
